[tool.poetry]
name = "dataviz-clima"
version = "0.1.0"
description = "A web scraper for INPE climate data."
authors = ["Juno Takano (jultty)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
matplotlib = "^3.7.1"
requests = "^2.31.0"
Babel = "^2.12.1"

[tool.poetry.scripts]
main = "python main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
